kubernetes/explorer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorer-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*) /index.html break;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - explorer.vna-devnet-1.devnet.verana.network
      secretName: explorer-ingress.network-cert
  rules:
    - host: explorer.vna-devnet-1.devnet.verana.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: explorer-service
                port:
                  number: 80
